--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" >
 
     <!-- Angular Material -->
-    <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="/node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
